--- a/estaticos/index.html
+++ b/estaticos/index.html
@@ -1,24 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+
 <head>
-    <title>Inicio</title>
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
-</html>
-<body>
-    <header>
-        <h1>Servidor de Imágenes</h1>
-    </header>
-    <main>
-        {{range .Imagenes}}
-        <div class="image_container">
-            <p class="titular">{{.Nombre}}</p>
-            <img class="imagen" src="data:image/{{.Extension}};base64, {{.Contenido}}" alt="{{.Nombre}}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Servidor de imágenes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <style>
+        .card {
+            background-color: black;
+            height: 400px; /* Tamaño fijo para todos los cards */
+            width: 400px; /* Ancho fijo para los cards */
+            margin: 5px; /* Espacio entre los cards */
+        }
+
+        .card-img-top {
+            width: 100%; /* Adaptar horizontalmente */
+            height: auto; /* Altura fija para las imágenes */
+            object-fit: cover; /* Ajustar la imagen */
+            object-position: center; /* Centrar la imagen verticalmente */
+            padding: 10px; /* Espacio entre la imagen y el borde del card */
+        }
+
+        #image-container {
+            height: 370px; /* Tamaño fijo para las imágenes */
+            display: flex; /* Flexbox para centrar la imagen */
+            justify-content: center; /* Centrar horizontalmente */
+            align-items: center; /* Centrar verticalmente */
+        }
+
+        .bi-cloud {
+            font-size: 4rem;
+            margin-right: 1rem;
+        }
+    </style>
+</head>
+
+<body class="d-flex flex-column min-vh-100">
+
+    <header class="bg-black text-white py-1">
+        <div class="d-flex justify-content-between align-items-center">
+            <h1 class="fw-bold text-start ms-3 mb-0">Servidor de imágenes</h1>
+            <i class="bi bi-cloud"></i>
         </div>
-        {{end}}
+    </header>
+
+    <main class="flex-grow-1 container mt-4 text-center">
+        <div class="row">
+            <div class="col-12">
+                <p class="fs-4"><strong>Hostname:</strong> {{.Hostname}}</p>
+                <p class="fs-4"><strong>Tema:</strong> {{.Tema}}</p>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            {{range .Imagenes}}
+            <div class="col-auto">
+                <div class="card">
+                    <div id="image-container">
+                        <img class="card-img-top" src="data:image/{{.Extension}};base64, {{.Contenido}}" alt="{{.Nombre}}">
+                    </div>
+                    <div class="card-body">
+                        <p class="fw-bold card-text fs-4 text-white">{{.Nombre}}</p>
+                    </div>
+                </div>
+            </div>
+            {{end}}
+        </div>
     </main>
-    <footer>
-        <div>Computacion en la nube</div>
-        <div>Juan Esteban Castaño Osma</div>
-        <div>2024-1</div>
+
+    <footer class="bg-black text-white py-3 mt-auto">
+        <div class="d-flex justify-content-between align-items-center">
+            <p class="fw-bold text-start ms-3 mb-0 fs-2">Computacion en la nube</p>
+            <p class="fw-bold mx-3 mb-0 fs-2">Juan Esteban Castaño Osma</p>
+            <p class="fw-bold text-end me-3 mb-0 fs-2">2024-2</p>
+        </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
+
+</html>
